--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.123.0",
+    "python-dotenv>=1.2.1",
+    "uvicorn>=0.38.0",
+]
