Add database models, Alembic migrations, and OAuth authentication endpoints
- Add client_secret.json to backend .gitignore
- Initialize Alembic with configuration and environment setup
- Create initial migration for User table with OAuth provider fields
- Add User model with email, password, OAuth provider support
- Implement CRUD operations for user management
- Add JWT token generation and password hashing utilities
- Create authentication endpoints for login and signup
- Implement Google and GitHub OAuth integration

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,21 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.17.2",
+    "authlib>=1.6.5",
     "fastapi>=0.123.0",
+    "google-auth>=2.43.0",
+    "httpx>=0.28.1",
+    "itsdangerous>=2.2.0",
+    "passlib>=1.7.4",
+    "psycopg2-binary>=2.9.11",
+    "pydantic-settings>=2.12.0",
+    "pydantic[email]>=2.12.5",
+    "pyjwt>=2.10.1",
     "python-dotenv>=1.2.1",
+    "python-jose[cryptography]>=3.5.0",
+    "python-multipart>=0.0.20",
+    "requests>=2.32.5",
+    "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
 ]
