--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.17.2",
     "authlib>=1.6.5",
+    "bcrypt>=5.0.0",
     "fastapi>=0.123.0",
     "google-auth>=2.43.0",
     "httpx>=0.28.1",
