Implement AI feedback and drill features in backend
- Update project description to reflect the AI Interview Coach functionality
- Add optional dependencies for development, including testing libraries
- Introduce new API endpoints for drills and feedback, enhancing interview preparation tools
- Implement CRUD operations for drills and feedback runs, allowing users to manage practice exercises and receive AI-generated feedback
- Create database models and schemas for drills, feedback runs, and evaluation rubrics
- Enhance configuration settings for LLM provider and feedback parameters
- Add integration and unit tests to ensure functionality and reliability of new features

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = "AI Interview Coach - Backend API"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -23,4 +23,33 @@ dependencies = [
     "requests>=2.32.5",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest-cov>=4.1.0",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+asyncio_mode = "auto"
+filterwarnings = [
+    "ignore::DeprecationWarning",
+]
+
+[tool.coverage.run]
+source = ["app"]
+branch = true
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise NotImplementedError",
+    "if TYPE_CHECKING:",
 ]
