--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "docker>=7.0.0",
     "fastapi>=0.123.0",
     "google-auth>=2.43.0",
+    "google-genai>=1.55.0",
     "httpx>=0.28.1",
     "itsdangerous>=2.2.0",
     "passlib>=1.7.4",
@@ -58,5 +59,7 @@ exclude_lines = [
 
 [dependency-groups]
 dev = [
+    "jupyter>=1.1.1",
+    "notebook>=7.5.1",
     "ruff>=0.14.9",
 ]
