--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "authlib>=1.6.5",
     "bcrypt>=5.0.0",
     "docker>=7.0.0",
-    "fastapi>=0.123.0",
+    "fastapi[standard]>=0.123.0",
     "google-auth>=2.43.0",
     "google-genai>=1.55.0",
     "httpx>=0.28.1",
