feat: Introduce LLM agent module, integrate Google AI dependencies, and refactor websocket management and exception handling.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     "bcrypt>=5.0.0",
     "docker>=7.0.0",
     "fastapi[standard]>=0.123.0",
+    "google-adk>=1.18.0",
     "google-auth>=2.43.0",
+    "google-cloud-aiplatform>=1.132.0",
     "google-genai>=1.55.0",
     "httpx>=0.28.1",
     "itsdangerous>=2.2.0",
